--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "cassandra-driver": "^3.5.0",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "moment": "^2.22.2",
+    "mongoose": "^5.1.7",
     "morgan": "^1.8.0",
+    "mssql": "^4.1.0",
     "resource-router-middleware": "^0.6.0"
   },
   "devDependencies": {
